[feature/add-yml] Update yml

--- a/.github/workflows/sync-to-oss.yml
+++ b/.github/workflows/sync-to-oss.yml
@@ -16,5 +16,5 @@ jobs:
 
       - name: Push to OSS repository
         run: |
-          git remote add public https://${{ secrets.GITHUB_TOKEN }}@github.com/ryotakusakabe/sync-repo-public.git
+          git remote add public https://${{ secrets.OSS_PAT }}@github.com/ryotakusakabe/sync-repo-public.git
           git push public main:release_from_sss
