--- a/.github/workflows/sync-to-oss.yml
+++ b/.github/workflows/sync-to-oss.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Push to OSS repository
         run: |
-          git remote add public https://${{ secrets.OSS_PAT }}@github.com/ryotakusakabe/sync-repo-public.git
+          git remote add public "https://${{ secrets.OSS_PAT }}@github.com/ryotakusakabe/sync-repo-public.git"
           git push public main:release_from_sss
