Feature/add yml (#6)
* [feature/add-yml] debugging

* [feature/add-yml] debugging

* [feature/add-yml] debugging

* [feature/add-yml] debugging

* [feature/add-yml] debugging

* [feature/add-yml] use classic token

* [feature/add-yml] debugging

* [feature/add-yml] use x-access-token format

* [feature/add-yml] debugging

* [feature/add-yml] debugging

* debugging

* debugging

* debugging

* debugging

* debugging

* debugging

* debugging

* debugging

* debugging

* debugging

* update sync-to-oss.yml

--- a/.github/workflows/sync-to-oss.yml
+++ b/.github/workflows/sync-to-oss.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    if: github.repository == 'ryotakusakabe/sync-repo-private'
     steps:
       - name: Checkout source repository
         uses: actions/checkout@v4
